🐛 Fix window controls being stretched in toolbar

--- a/components/csd/content/browser-window-controls.css
+++ b/components/csd/content/browser-window-controls.css
@@ -4,6 +4,7 @@
 
 browser-window-controls {
     display: flex;
+    align-items: center;
     gap: 0.1rem;
 }
 
